Blog person info vertical text align fix

--- a/css/components/blog.css
+++ b/css/components/blog.css
@@ -87,7 +87,7 @@
             }
                 .info > * {
                     display: inline-block;
-                    padding-top: 16px;
+                    padding-top: 13px;
                     font-family: 'Montserrat', sans-serif;
                     font-weight: 500;
                     font-size: 13px;
